--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
     "expo-linking": "~6.3.1",
+    "expo-navigation-bar": "^3.0.7",
     "expo-router": "~3.5.23",
     "expo-status-bar": "~1.12.1",
     "nativewind": "^2.0.11",
